// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fade should render {opacity: 0} 1`] = `
<ForwardRef(AnimatedComponentWrapper)
  pointerEvents="box-none"
  style={
    {
      "opacity": 0,
      "transform": [
        {
          "scale": 0,
        },
      ],
    }
  }
>
  <Text>
    text
  </Text>
</ForwardRef(AnimatedComponentWrapper)>
`;

exports[`Fade should render {opacity: 1} 1`] = `
<ForwardRef(AnimatedComponentWrapper)
  pointerEvents="box-none"
  style={
    {
      "opacity": 1,
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <Text>
    text
  </Text>
</ForwardRef(AnimatedComponentWrapper)>
`;
